--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,27 +10,24 @@
     <header>
         <h1>Métodos Estadísticos Para Ecuaciones Diferenciales Estocásticas</h1>
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
+        <div class="form-container">
+            <a href="{{ url_for('main.index') }}">
+                <button>Home</button>
+            </a>
+            <a href="{{ url_for('main.Euler') }}">
+                <button>Método de Euler</button>
+            </a>
+            <a href="{{ url_for('main.Ptransicion') }}">
+                <button>Probabilidad de transición</button>
+            </a>
+        </div>
     </header>
     
     <main>
-        <p>En construcción</p>
+        <p>Home</p>
     </main>
 
-    <div class="form-container">
-        <form action="/procesar" method="POST">
-         <div> 
-            <label for="pasos">Número de pasos:</label><br>
-            <input type="number" id="pasos" name="pasos" required min="1" step="1" class="input-field">
-         </div> <br>
-         <div>
-            <label for="tiempo">Horizonte de tiempo:</label><br>
-            <input type="number" id="tiempo" name="tiempo" required min="0" step="0.00001" class="input-field">
-         </div>
-         <button class="btn" type="submit">Graficar</button>
-        </form>
-        
-        <img src="{{ url_for('static', filename='images/graph.png') }}">
-    </div>
+
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 </html>
