--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,11 +14,11 @@
             <a href="{{ url_for('main.index') }}">
                 <button>Home</button>
             </a>
-            <a href="{{ url_for('main.Euler') }}">
-                <button>Método de Euler</button>
+            <a href="{{ url_for('main.simulaciones') }}">
+                <button>Simulaciones</button>
             </a>
-            <a href="{{ url_for('main.Ptransicion') }}">
-                <button>Probabilidad de transición</button>
+            <a href="{{ url_for('main.transicion') }}">
+                <button>Transiciones</button>
             </a>
         </div>
     </header>
