--- a/app/static/css/style_estimadores.css
+++ b/app/static/css/style_estimadores.css
@@ -6,11 +6,10 @@ body {
 }
 
 header {
-    background: linear-gradient(90deg, #000000, #858585);
-    color: rgb(255, 255, 255);
+    background:linear-gradient(90deg, #000000, #858585);
+    color: white;
     text-align: center;
     padding: 20px;
-    
 }
 
 main {
@@ -37,6 +36,7 @@ button {
 form div {
     margin-bottom: 15px;  /* Espaciado entre los campos */
 }
+
 .btn {
     min-width: 150px; /* Ancho mínimo garantizado */
     padding: 10px 20px; /* Espaciado dentro del botón */
@@ -49,14 +49,16 @@ form div {
     cursor: pointer; /* Cambia el cursor cuando pasa por encima */
     transition: background-color 0.3s; /* Efecto de transición en el color de fondo */
 }
+
 .btn:hover {
     background-color: #45a049; /* Color de fondo al pasar el mouse */
 }
 
-.form-container {
+.form-container-3 {
     display: flex;
-    justify-content: space-between; /* Para separar los elementos */
+    justify-content: left; /* Para separar los elementos */
     align-items: center; /* Alinear verticalmente */
+    gap: 20px;
 }
 
 /* Para la imagen */
@@ -69,7 +71,7 @@ form div {
 /* Contenedor para el formulario y la imagen */
 .form-container {
     display: flex;
-    justify-content: space-between; /* Para separar los elementos */
+    justify-content: center; /* Para separar los elementos */
     align-items: center; /* Alinear verticalmente */
     padding: 20px; /* Espacio entre el borde del contenedor y los elementos */
     margin: 0 auto; /* Centrar el contenedor */
@@ -109,3 +111,26 @@ p {
     line-height: 1.8;        /* interlineado */
     text-align: justify;     /* alineación (puede ser: left, right, center, justify) */
   }
+  .contenedor {
+    width: 1000px;        /* ancho fijo */
+    height: 400px;       /* alto fijo */
+    padding: 20px;       /* espacio interno */
+    margin: auto;   /* centrado horizontal */
+    background-color: #f5f5f5;
+    overflow: auto;            /* Muestra scroll si el texto se pasa */
+    box-sizing: border-box; 
+    border-radius: 15px;    /* Incluye padding y borde dentro del ancho total */
+    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2); sombra
+  }
+  .contenedor p {
+    margin: 0;
+    line-height: 1.6;
+    text-align: justify;
+    word-wrap: break-word;     /* Rompe palabras largas si es necesario */
+  }
+
+  .form-container-2 {
+    display: flex;
+    justify-content: space-between; /* Para separar los elementos */
+    align-items: center; /* Alinear verticalmente */
+}
