--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,17 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Métodos Estadísticos Para Ecuaciones Diferenciales Estocásticas</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <script id="MathJax-script" async
+          src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>      
 </head>
 <body>
     <header>
         <h1>Métodos Estadísticos Para Ecuaciones Diferenciales Estocásticas</h1>
-        <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo">
+        <br>
+        <p>Alejandro Antonio Estrada Franco</p>
+       <!-- <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Logo"> -->
         <div class="form-container">
             <a href="{{ url_for('main.index') }}">
                 <button>Home</button>
             </a>
             <a href="{{ url_for('main.simulaciones') }}">
                 <button>Simulaciones</button>
+            </a>
+            <a href="{{ url_for('main.estimaciones') }}">
+                <button>Estimadores</button>
             </a>
             <a href="{{ url_for('main.transicion') }}">
                 <button>Transiciones</button>
