--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -35,6 +35,8 @@
         <p>Home</p>
     </main>
 
+    <img id="imagen" src="{{ url_for('static', filename='images/stiempo.png') }}" alt="Imagen" />
+    <img id="imagen" src="{{ url_for('static', filename='images/stiempoParcial.png') }}" alt="Imagen" />
 
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
