--- a/app/templates/transicion.html
+++ b/app/templates/transicion.html
@@ -58,7 +58,7 @@
                 </div>
                 <div>
                     <label for="drift">Drift:</label><br>
-                    <input type="number" id="drift" name="drift" required min="0" step="0.000001" class="input-field">
+                    <input type="number" id="drift" name="drift" required step="0.000001" class="input-field">
                 </div>
                 <div>
                     <label for="volatilidad">Volatilidad:</label><br>
